# arclang

./: README.md  pyproject.toml  setup.py
arclang/: __init__.py  __main__.py
